# Screex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: eval-guiworld.md  eval.md
docs/superpowers/plans/: 2026-06-14-screex-screen-recording-understanding.md  2026-06-14-squint-v2-event-classification.md  2026-06-14-squint.md  2026-06-15-screex-guiworld-study.md  2026-06-15-screex-sharingan-study.md  2026-06-15-screex-v0.2-text-segmentation-and-transcript.md  2026-06-15-screex-v0.3-ocr-speed-and-robustness.md  2026-06-15-screex-v0.4-audio-narration.md  2026-06-17-screex-v0.6-action-events.md
docs/superpowers/specs/: 2026-06-14-squint-design.md  2026-06-14-squint-v2-event-classification-design.md  2026-06-14-squint-v2.1-adaptive-cut-threshold-design.md  2026-06-14-squint-v3-screen-recording-understanding-design.md  2026-06-15-screex-guiworld-study-design.md  2026-06-15-screex-sharingan-study-design.md  2026-06-15-screex-v0.2-text-segmentation-and-transcript-design.md  2026-06-15-screex-v0.3-ocr-speed-and-robustness-design.md  2026-06-15-screex-v0.4-audio-narration-design.md  2026-06-17-screex-improvement-roadmap.md  2026-06-17-screex-v0.6-action-events-design.md
screex/: SKILL.md  cli.py  mcp_server.py  query.py  skill.py  transcript.py
screex/core/: analyzer.py  audio.py  curate.py  cursor.py  events.py  index.py  manifest.py  mapper.py  ocr.py  redact.py  regiondiff.py  segment.py  som.py  source.py
scripts/: eval.py  guiworld_to_qa.py
tests/: conftest.py  test_analyzer.py  test_audio.py  test_cli.py  test_curate.py  test_cursor.py  test_eval.py  test_events.py  test_guiworld_to_qa.py  test_index.py  test_manifest.py  test_mapper.py  test_mcp_server.py  test_ocr.py  test_query.py  test_redact.py  test_regiondiff.py  test_segment.py  test_skill.py  test_som.py  test_source.py  test_transcript.py
