[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "screex"
version = "0.2.0"
description = "Screen-recording understanding: turn a screencast into a queryable index of UI states for transcripts, Q&A, and how-to / bug-report generation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rushikesh Hiray", email = "rhiray03@gmail.com" }]
keywords = [
    "screen-recording",
    "screencast",
    "ocr",
    "llm",
    "claude",
    "claude-skill",
    "agents",
    "video-understanding",
    "ui-understanding",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "opencv-python>=4.5",
    "numpy>=1.21",
    "rapidocr-onnxruntime>=1.3",
]

[project.optional-dependencies]
test = ["pytest>=7"]
capture = ["mss>=9"]
dev = ["pytest>=7", "ruff>=0.5", "mss>=9"]

[project.scripts]
screex = "screex.cli:main"

[project.urls]
Homepage = "https://github.com/blueprintparadise/Screex"
Repository = "https://github.com/blueprintparadise/Screex"
Issues = "https://github.com/blueprintparadise/Screex/issues"

[tool.setuptools]
packages = ["screex", "screex.core"]
include-package-data = true

[tool.setuptools.package-data]
screex = ["SKILL.md"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
